@@ -9,11 +9,10 @@ import voicerecipeserver.model.entities.*;
 import voicerecipeserver.model.mappers.DefaultMapper;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.junit.jupiter.api.Assertions.assertEquals;
 
 
 public class DefaultMapperTest {
@@ -161,7 +160,7 @@ public class DefaultMapperTest {
 
     @Test
     void map_comment_to_commentDto() {
-        User user = new User("anton", "1234", "Антон", Collections.singleton(Role.USER));
+        User user = new User("anton", "1234", "Антон", Set.of(new Role("ADMIN")));
         Recipe recipe = new Recipe();
         recipe.setId(25L);
         Comment comment = new Comment(1L, recipe, user, null, "Очень густо");
@@ -258,9 +257,9 @@ public class DefaultMapperTest {
     void map_recipe_to_recipeDto() {
         Recipe recipe = new Recipe();
         recipe.setName("name123");
-        recipe.setAuthor(new User("anton", "1234", "Антон", Collections.singleton(Role.USER)));
+        recipe.setAuthor(new User("anton", "1234", "Антон", Set.of(new Role("ADMIN"))));
         recipe.setCookTimeMins(4044);
-        recipe.setMedia(new Media(11L, null, null, null, null));
+        recipe.setMedia(new Media(11L, null, null, null, null, null));
 
         RecipeDto dto = mapper.map(recipe, RecipeDto.class);
         assertEquals(recipe.getName(), dto.getName());
@@ -282,22 +281,6 @@ public class DefaultMapperTest {
         assertEquals(mark.getId(), markDto.getId());
         assertEquals(mark.getUser().getUid(), markDto.getUserUid());
     }
-
-//    @Test
-//    void saving_marks() {
-//        Mark mark = new Mark();
-//        mark.setUser(new User(1L, "author1", null, null, null, null, null, null, null));
-//        Recipe recipe = new Recipe();
-//        recipe.setName("name123");
-//        recipe.setAuthor(new User(2L, "author2", null, null, null, null, null, null, null));
-//        recipe.setCookTimeMins(4044);
-//        recipe.setMedia(new Media(11L, null, null, null, null));
-//        mark.setRecipe(recipe);
-//        MarksRepository marksRepository;
-//        marksRepository.save(mark);
-//
-
-//    }
 
     @Test
     void map_recipeDto_with_required_field_to_recipe() {
